test/typeAsStatement.slq

def main(){
	!int[16]; // error
}
